--- a/README
+++ b/README
@@ -13,4 +13,4 @@ Contact information
 Feel free to send any questions, ideas and comments to my e-mail adress.
 
 Name: Aleksandar Prokopec
-e-mail: axel22 "the at character" gmail "the dot character" com
+e-mail: aleksandar "the dot character" prokopec "the at character" gmail "the dot character" com
